@@ -1,53 +1,59 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`at`](#at): This class manages /etc/at.allow and /etc/at.deny and the atd service.
 
-**Defined types**
+### Defined types
 
 * [`at::user`](#atuser): Add the user $name to /etc/at.allow
 
 ## Classes
 
-### at
+### <a name="at"></a>`at`
 
 This class manages /etc/at.allow and /etc/at.deny and the atd service.
 
 #### Parameters
 
-The following parameters are available in the `at` class.
+The following parameters are available in the `at` class:
 
-##### `users`
+* [`users`](#users)
+* [`package_ensure`](#package_ensure)
+
+##### <a name="users"></a>`users`
 
 Data type: `Array[String]`
 
 An array of additional at users, using the defiend type ``at::user``
 
-Default value: []
+Default value: `[]`
 
-##### `package_ensure`
+##### <a name="package_ensure"></a>`package_ensure`
 
 Data type: `String`
 
 The value of ``ensure`` for package resources
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
 ## Defined types
 
-### at::user
+### <a name="atuser"></a>`at::user`
 
 Add the user $name to /etc/at.allow
 
 #### Parameters
 
-The following parameters are available in the `at::user` defined type.
+The following parameters are available in the `at::user` defined type:
 
-##### `name`
+* [`name`](#name)
+
+##### <a name="name"></a>`name`
 
 The user to add to /etc/at.allow
 
