@@ -1,3 +1,6 @@
+* Sat Jan 22 2022 Trevor Vaughan <trevor@sicura.us> - 0.2.1
+- Added support for Amazon Linux 2
+
 * Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
